--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -354,7 +354,8 @@ header {
   border-bottom: 1px solid #e7e7e7; }
 
 .hscroll {
-  overflow-x: visible; }
+  overflow-x: visible;
+  position: relative; }
 
 body {
   margin-top: 20px;
@@ -1438,10 +1439,10 @@ small.search_term {
 .table-rows-pagination .table-pagination {
   display: inline-block; }
 
-#data-table th * {
+.data-table th * {
   color: #000; }
 
-#data-table thead button {
+.data-table thead button {
   border: 1px solid #bbb;
   background-color: inherit;
   vertical-align: bottom;
@@ -1451,26 +1452,26 @@ small.search_term {
   text-overflow: ellipsis;
   -ms-text-overflow: ellipsis; }
 
-#data-table thead .column-name {
+.data-table thead .column-name {
   font-weight: bold;
   font-style: italic;
   font-size: 1.2em;
   margin-bottom: .2em; }
 
-#data-table thead .popover {
+.data-table thead .popover {
   word-break: keep-all;
   word-break: break-word;
   overflow-wrap: break-word;
   margin-top: 1.2em;
   padding: .5em; }
 
-#data-table thead .helptext {
+.data-table thead .helptext {
   border-bottom: 1px solid #ccc; }
 
-#data-table thead .helptext + * {
+.data-table thead .helptext + * {
   margin: 1em 0 0 0; }
 
-#data-table thead button {
+.data-table thead button {
   margin-top: .5em; }
 
 .controls {
