--- a/views/layout.tt
+++ b/views/layout.tt
@@ -372,6 +372,14 @@
                         </label>
                     </div>
                 </div>
+                <div class="form-group">
+                    <label for="default_today">Default value:</label>
+                    <div class="checkbox">
+                        <label>
+                            <input id="default_today" type="checkbox" name="default_today" [% IF column.default_today %]checked[% END %]>Default new values to today's date
+                        </label>
+                    </div>
+                </div>
             </div>
             <div id="divcode"
                 [% IF column.type != "calc" AND column.type != "rag" %]
