--- a/views/table.tt
+++ b/views/table.tt
@@ -28,6 +28,7 @@
                             <th>Create and edit child records</th>
                             <th>Bulk update records</th>
                             <th>Create and manage linked records</th>
+                            <th>Select extra view limits</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -65,6 +66,9 @@
                                 </td>
                                 <td>
                                     <input type="checkbox" name="permissions" value="[% group.id %]_link" [% IF layout_edit.group_has(group.id, 'link') %]checked[% END %]>
+                                </td>
+                                <td>
+                                    <input type="checkbox" name="permissions" value="[% group.id %]_view_limit_extra" [% IF layout_edit.group_has(group.id, 'view_limit_extra') %]checked[% END %]>
                                 </td>
                             </tr>
                         [% END %]
