Show sensible amount of entries by default on timeline

--- a/views/data_timeline.tt
+++ b/views/data_timeline.tt
@@ -95,8 +95,8 @@
                 },
                 onMove: on_move,
                 snap:   snap_to_day,
-                min: "[% timeline.min.ymd %]",
-                max: "[% timeline.max.ymd %]",
+                start: "[% timeline.min.ymd %]",
+                end: "[% timeline.max.ymd %]",
                 orientation: {axis: "both"}
             };
 
