--- a/public/css/local.css
+++ b/public/css/local.css
@@ -152,3 +152,41 @@ img.autosize {
     border-radius: 3px;
     padding: 10px;
 }
+
+.centered-overlay {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.3);
+    /*dim the background*/
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: black;
+    text-align: center;
+    z-index: 1050;
+    display: none;
+}
+
+.wrapper {
+    position: relative;
+}
+
+.loader {
+    margin: auto;
+    border: 5px solid #f3f3f3;
+    position: fixed;
+    bottom: 50%;
+    left: 0;
+    right: 0;
+    height: 50px;
+    border-top: 5px solid #555;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
