--- a/views/data_timeline.tt
+++ b/views/data_timeline.tt
@@ -1,5 +1,12 @@
 [% UNLESS page_as_mech %]
-    <a href="?png=1">View as PNG image for print or download</a>
+    <p><a href="?png=1">View as PNG image for print or download</a></p>
+[% END %]
+
+[% FOREACH color IN colors %]
+    <div class="timeline-color">
+        <div class="timeline-color-key" style="background-color:[% color.color %]"></div>
+        <div class="timeline-color-text">[% color.key | html_entity %]</div>
+    </div>
 [% END %]
 
 <div class="wrapper">
