--- a/views/data_timeline.tt
+++ b/views/data_timeline.tt
@@ -252,7 +252,7 @@
             <b>Record {{current_id}}</b><br>
             <ul class="list-unstyled">
                 {{#each values}}
-                    <li>{{name}}: {{value}}</li>
+                    <li>{{name}}: {{{value}}}</li>
                 {{/each}}
             </ul>
             <a class = "moreinfo" data-record-id="{{current_id}}">Read more...</a>
