Align pop-up text to left in timeline

--- a/public/css/local.css
+++ b/public/css/local.css
@@ -151,6 +151,7 @@ img.autosize {
     background-color: white;
     border-radius: 3px;
     padding: 10px;
+    text-align: left;
 }
 
 .centered-overlay {
