--- a/views/data_timeline.tt
+++ b/views/data_timeline.tt
@@ -33,7 +33,7 @@
             var groups = JSON.parse(json_group);
             var changed = {};
 
-            var template = Handlebars.compile(document.getElementById('item-template').innerHTML);
+            var template = Handlebars.templates.timelineitem;
 
             var save_elem_sel    = '#submit_button',
                 cancel_elem_sel  = '#cancel_button',
@@ -244,23 +244,6 @@
         } )();
         [% END %]
     [% END %]';
-</script>
-
-<script id="item-template" type="text/x-handlebars-template">
-    <div class="item-popup" >
-        <div class="item-popup-inner" >
-            <b>Record {{current_id}}</b><br>
-            <ul class="list-unstyled">
-                {{#each values}}
-                    <li>{{name}}: {{{value}}}</li>
-                {{/each}}
-            </ul>
-            <a class = "moreinfo" data-record-id="{{current_id}}">Read more...</a>
-        </div>
-    </div>
-    <div class="vis-item-shown-content">
-        {{content}}
-    </div>
 </script>
 
 <form role="form" method="post" enctype="multipart/form-data" style="display: none" action="/edits">
