--- a/views/layout.tt
+++ b/views/layout.tt
@@ -398,6 +398,7 @@
                             <option value="date" [% IF column.return_type == "date" %]selected[% END %]>Date</option>
                             <option value="integer" [% IF column.return_type == "integer" %]selected[% END %]>Integer</option>
                             <option value="numeric" [% IF column.return_type == "numeric" %]selected[% END %]>Decimal</option>
+                            <option value="globe" [% IF column.return_type == "globe" %]selected[% END %]>Globe location</option>
                         </select>
                     </div>
                 </div>
