--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -213,7 +213,7 @@
                 });
             </script>
         [% END %]
-        [% IF page == "edit" OR page == "bulk" OR page == "approval" OR page == "view" OR page == "layout" OR (page == "data" AND viewtype == "timeline") %]
+        [% IF page == "edit" OR page == "bulk" OR page == "approval" OR page == "view" OR page == "layout" OR page == "data" %]
             <script type="text/javascript" src="[% url.js %]/base64.min.js"></script>
         [% END %]
         [% IF page == "login" %]
@@ -263,6 +263,13 @@
                     <script type="text/javascript" src="[% scheme %]://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.10/es5-shim.min.js"></script>
                 [% END %]
                 <script type="text/javascript" src="[% scheme %]://cdnjs.cloudflare.com/ajax/libs/vis/4.20.0/vis.min.js"></script>
+            [% END %]
+        [% END %]
+        [% IF page == "data" AND viewtype == "globe" %]
+            [% IF hostlocal %]
+                <script type="text/javascript" src="[% url.js %]/plotly-geo-1.38.2.js"></script>
+            [% ELSE %]
+                <script type="text/javascript" src="[% schema %]://cdn.plot.ly/plotly-geo-1.38.2.min.js"></script>
             [% END %]
         [% END %]
         [% IF page == "data" AND viewtype == "table" %]
